force-app/main/default/objects/Opportunity/fields/Dangerous_Hazardous__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Hazardous__c</fullName>
    <inlineHelpText>Does the kit contain Dangerous, Hazardous or Fragile materials?</inlineHelpText>
    <label>Dangerous/Hazardous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>