force-app/main/default/objects/Opportunity/fields/Date_Bid_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Bid_Due__c</fullName>
    <label>Date Bid Due</label>
    <type>Date</type>
</CustomField>