force-app/main/default/objects/Opportunity/fields/Date_Last_Modified_by_Non_Admin__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Modified_by_Non_Admin__c</fullName>
    <label>Date Last Modified by Non-Admin</label>
    <type>Date</type>
</CustomField>