force-app/main/default/objects/Opportunity/fields/Date_of_Rebid__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Rebid__c</fullName>
    <label>Date of Rebid</label>
    <type>Date</type>
</CustomField>