force-app/main/default/objects/Opportunity/fields/Date_to_Revisit__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Revisit__c</fullName>
    <inlineHelpText>Identify a future date when you would like to revusit  this opportunity; set a task to be reminded</inlineHelpText>
    <label>Date to Revisit</label>
    <type>Date</type>
</CustomField>