force-app/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <description>This field is for reporting purpose</description>
    <formula>CloseDate  -  today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>