force-app/main/default/objects/Opportunity/fields/Days_to_Closure__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Closure__c</fullName>
    <formula>IF(ISBLANK(  Opportunity_Close_Date__c  ), CloseDate - DATEVALUE(CreatedDate), Opportunity_Close_Date__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>