force-app/main/default/objects/Opportunity/fields/Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated in a Work Order flow when RFP RFQ work order is marked as Deal Desk</description>
    <inlineHelpText>If checked, indicates there is at least one RFP/RPQ work order on this opportunty marked as part of Deal Desk</inlineHelpText>
    <label>Deal Desk</label>
    <type>Checkbox</type>
</CustomField>