force-app/main/default/objects/Opportunity/fields/Deliveries_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Deliveries_Per_Week__c</fullName>
    <label>Deliveries Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>