force-app/main/default/objects/Opportunity/fields/Delivery_Locations__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Locations__c</fullName>
    <label>Delivery Locations</label>
    <type>TextArea</type>
</CustomField>