force-app/main/default/objects/Opportunity/fields/Delivery_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Requirements__c</fullName>
    <label>Delivery Requirements</label>
    <type>TextArea</type>
</CustomField>