force-app/main/default/objects/Opportunity/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <description>Size Depth</description>
    <label>Depth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>