force-app/main/default/objects/Opportunity/fields/Design_Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Kickoff_Date__c</fullName>
    <label>Design Kick-off Date</label>
    <type>Date</type>
</CustomField>