force-app/main/default/objects/Opportunity/fields/Design_Stage__c.field-meta.xml
<CustomField>
    <fullName>Design_Stage__c</fullName>
    <label>zzDesign Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>