force-app/main/default/objects/Opportunity/fields/Design_Type__c.field-meta.xml
<CustomField>
    <fullName>Design_Type__c</fullName>
    <label>Design Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>