force-app/main/default/objects/Opportunity/fields/Details_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Details_from_Lead__c</fullName>
    <inlineHelpText>If this opportunity was created from a lead, the description of that lead is copied here at the time of conversion.</inlineHelpText>
    <label>Details from Lead</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>