force-app/main/default/objects/Opportunity/fields/distribution_channel__c.field-meta.xml
<CustomField>
    <fullName>distribution_channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>