force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pull the division from the opportunity owner&apos;s User record</description>
    <label>zzUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>