force-app/main/default/objects/Opportunity/fields/Division_del__c.field-meta.xml
<CustomField>
    <fullName>Division_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pull the division from the opportunity owner&apos;s User record</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1_del</relationshipName>
    <type>Lookup</type>
</CustomField>