force-app/main/default/objects/Opportunity/fields/Drawings_or_Pictures_Available__c.field-meta.xml
<CustomField>
    <fullName>Drawings_or_Pictures_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawings or Pictures Available?</label>
    <type>Checkbox</type>
</CustomField>