force-app/main/default/objects/Opportunity/fields/Email_iRep_BDM_RVP__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_BDM_RVP__c</fullName>
    <label>Email - iRep BDM/RVP</label>
    <type>Email</type>
</CustomField>