force-app/main/default/objects/Opportunity/fields/Email_iRep_Dir__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_Dir__c</fullName>
    <label>Email - iRep Level 3</label>
    <type>Email</type>
</CustomField>