force-app/main/default/objects/Opportunity/fields/Email_iRep_DMD__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_DMD__c</fullName>
    <label>Email - iRep DMD</label>
    <type>Email</type>
</CustomField>