force-app/main/default/objects/Opportunity/fields/Email_iRep_GSM__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_GSM__c</fullName>
    <label>Email - iRep Level 2</label>
    <type>Email</type>
</CustomField>