force-app/main/default/objects/Opportunity/fields/Email_iRep_Pres__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_Pres__c</fullName>
    <label>Email - iRep Sales Leader</label>
    <type>Email</type>
</CustomField>