force-app/main/default/objects/Opportunity/fields/Email_iRep_TL__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_TL__c</fullName>
    <label>Email - iRep TL</label>
    <type>Email</type>
</CustomField>