force-app/main/default/objects/Opportunity/fields/Email_iRep_VP__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_VP__c</fullName>
    <label>Email - iRep Level 1</label>
    <type>Email</type>
</CustomField>