force-app/main/default/objects/Opportunity/fields/Email_iRep_ZM_SM__c.field-meta.xml
<CustomField>
    <fullName>Email_iRep_ZM_SM__c</fullName>
    <label>Email - iRep Level 3a</label>
    <type>Email</type>
</CustomField>