force-app/main/default/objects/Opportunity/fields/Email_PSR_Dir__c.field-meta.xml
<CustomField>
    <fullName>Email_PSR_Dir__c</fullName>
    <defaultValue>$User.Dir_Email__c</defaultValue>
    <label>Email - PSR Level 3</label>
    <type>Email</type>
</CustomField>