force-app/main/default/objects/Opportunity/fields/Email_PSR_DMD__c.field-meta.xml
<CustomField>
    <fullName>Email_PSR_DMD__c</fullName>
    <label>Email - PSR DMD</label>
    <type>Email</type>
</CustomField>