force-app/main/default/objects/Opportunity/fields/Email_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Email_Team_Lead__c</fullName>
    <defaultValue>$User.TL_Email__c</defaultValue>
    <label>Email Team Lead</label>
    <type>Email</type>
</CustomField>