force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Volume__c</fullName>
    <inlineHelpText>Please provide the volume in units.</inlineHelpText>
    <label>Estimated Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>