force-app/main/default/objects/Opportunity/fields/Estimated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales__c</fullName>
    <label>Estimated Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>