force-app/main/default/objects/Opportunity/fields/ETA_on_Doc_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>ETA_on_Doc_in_Progress__c</fullName>
    <description>Used for Vine PDN opportunities only</description>
    <label>ETA on Doc in Progress</label>
    <type>Date</type>
</CustomField>