force-app/main/default/objects/Opportunity/fields/EVA__c.field-meta.xml
<CustomField>
    <fullName>EVA__c</fullName>
    <description>Kitting</description>
    <label>EVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>