force-app/main/default/objects/Opportunity/fields/EVA_Approved__c.field-meta.xml
<CustomField>
    <fullName>EVA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVA Approved</label>
    <type>Checkbox</type>
</CustomField>