force-app/main/default/objects/Opportunity/fields/EVA_Requested__c.field-meta.xml
<CustomField>
    <fullName>EVA_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVA Requested</label>
    <type>Checkbox</type>
</CustomField>