force-app/main/default/objects/Opportunity/fields/Expected_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Billing_Date__c</fullName>
    <inlineHelpText>The date when you expect the order(s) to be billed in accounting.</inlineHelpText>
    <label>Expected Billing Date</label>
    <type>Date</type>
</CustomField>