force-app/main/default/objects/Opportunity/fields/Express_Lane__c.field-meta.xml
<CustomField>
    <fullName>Express_Lane__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Express Lane</label>
    <type>Checkbox</type>
</CustomField>