force-app/main/default/objects/Opportunity/fields/First_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Delivery_Date__c</fullName>
    <label>Expected First Delivery Date</label>
    <type>Date</type>
</CustomField>