force-app/main/default/objects/Opportunity/fields/Folding_Carton_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Folding_Carton_Revenue__c</fullName>
    <label>Retail Pkg Revenue</label>
    <summarizedField>Vendor_Detail_Link__c.Vendor_Category_SubTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Detail_Link__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>RETAIL PACKAGING - DISPLAY, RETAIL PACKAGING - FOLDING CARTON</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Detail_Link__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>