force-app/main/default/objects/Opportunity/fields/Food_Bev_Supps_included__c.field-meta.xml
<CustomField>
    <fullName>Food_Bev_Supps_included__c</fullName>
    <inlineHelpText>Does the kitting contain food, beverage, or supplements?</inlineHelpText>
    <label>Food/Bev/Supps included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>