force-app/main/default/objects/Opportunity/fields/Food_Bev_SuppsKitting__c.field-meta.xml
<CustomField>
    <fullName>Food_Bev_SuppsKitting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kitting</description>
    <label>Food/Bev/Supps</label>
    <type>Checkbox</type>
</CustomField>