force-app/main/default/objects/Opportunity/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>Will these kits be sent one time only, or is this an ongoing opportunity?</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>