force-app/main/default/objects/Opportunity/fields/FS_Equipment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Revenue__c</fullName>
    <description>Rollup summary from Vendor record, created for reporting for FS Equipment Specialists</description>
    <label>FS Equipment Revenue</label>
    <summarizedField>Vendor_Detail_Link__c.Vendor_Category_SubTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Detail_Link__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>JANITORIAL POWER EQUIPMENT, JANITORIAL POWER EQUIPMENT-PRIVATE BRAND</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Detail_Link__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>