force-app/main/default/objects/Opportunity/fields/Glue_Tab__c.field-meta.xml
<CustomField>
    <fullName>Glue_Tab__c</fullName>
    <label>Glue Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glue In</fullName>
            </value>
            <value>
                <fullName>Glue Out</fullName>
            </value>
            <value>
                <fullName>N/A - Pad Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>