force-app/main/default/objects/Opportunity/fields/Growth_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Growth_Initiative__c</fullName>
    <inlineHelpText>CUSTOMER EXPERIENCE - innovation, cost-down, sustainability; new materials development | 

DIVERSIFICATION - verticals expansion | 

GLOBAL INITIATIVES - global accounts policy; website rebranding; contract manufacturer | 

ORGANIC GROWTH - existing relationships, products, services | 

PACKOUT AND KITTING - 3PL packout &amp; kitting | 

PROCESS IMPROVEMENTS - design and program management process improvements; Supplier audit process</inlineHelpText>
    <label>Growth Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Diversification</fullName>
            </value>
            <value>
                <fullName>Global Initiatives</fullName>
            </value>
            <value>
                <fullName>Organic Growth</fullName>
            </value>
            <value>
                <fullName>Packout and Kitting</fullName>
            </value>
            <value>
                <fullName>Process Improvements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>