force-app/main/default/objects/Opportunity/fields/How_are_Raw_Materials_packaged__c.field-meta.xml
<CustomField>
    <fullName>How_are_Raw_Materials_packaged__c</fullName>
    <description>Kitting</description>
    <inlineHelpText>For example:  1 up on a sheet, 2 up on a roll</inlineHelpText>
    <label>How are Raw Materials packaged?</label>
    <type>TextArea</type>
</CustomField>