force-app/main/default/objects/Opportunity/fields/Implementation_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name you select here will be notified by email any time you change the Instructions field below.</inlineHelpText>
    <label>Kitting Program Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>