force-app/main/default/objects/Opportunity/fields/Inbound_Freight_Cost_on_Raw_Materials__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Freight_Cost_on_Raw_Materials__c</fullName>
    <description>Kitting</description>
    <label>Inbound Freight Cost on Raw Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>