force-app/main/default/objects/Opportunity/fields/Inbound_Raw_Material_count_per_palle_del__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Raw_Material_count_per_palle_del__c</fullName>
    <description>Kitting</description>
    <label>Inbound Raw Material count per pallet</label>
    <type>TextArea</type>
</CustomField>