force-app/main/default/objects/Opportunity/fields/Information_Type__c.field-meta.xml
<CustomField>
    <fullName>Information_Type__c</fullName>
    <label>Information Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Presolicitation</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>