force-app/main/default/objects/Opportunity/fields/Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submitter__c</fullName>
    <description>Populated via approval process field update to store the email address of the $User that clicked the initial submission button. This field exists as a workaround solution to having an approval process initial action send an email to the user who submitted the initial action. Field created to support the PDN Approval Processes on the Opportunity object. Does not need to be on any page layouts. 

January 2017</description>
    <inlineHelpText>Email address of the user who initially submitted for approval.</inlineHelpText>
    <label>Initial Submitter</label>
    <type>Email</type>
</CustomField>