force-app/main/default/objects/Opportunity/fields/Instructions_for_Implementation_Team__c.field-meta.xml
<CustomField>
    <fullName>Instructions_for_Implementation_Team__c</fullName>
    <description>OK TO DELETE DATA AND DELETE FIELD, NO LONGER USED</description>
    <inlineHelpText>Any time you change these instructions, an email will be sent to the person selected in the field above - implementation team lead.</inlineHelpText>
    <label>ZZInstructions for Implementation Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>