force-app/main/default/objects/Opportunity/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <label>Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Email</fullName>
            </value>
            <value>
                <fullName>Manual Email</fullName>
            </value>
            <value>
                <fullName>Manual Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>