force-app/main/default/objects/Opportunity/fields/iRep__c.field-meta.xml
<CustomField>
    <fullName>iRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The iRep on the opportunity matches the Account&apos;s iRep.  If the Account is a Customer, the iRep will need to be updated in Synygy.  If the Account is a Prospect, this can be updated by RVPs and VPs.</inlineHelpText>
    <label>iRep</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Primary_Sales_Rep__c.iRep_Indicator__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>iRep Program Opportunities</relationshipLabel>
    <relationshipName>iRepOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>