force-app/main/default/objects/Opportunity/fields/iRep_Plan_Stamp__c.field-meta.xml
<CustomField>
    <fullName>iRep_Plan_Stamp__c</fullName>
    <label>iRep Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>i20</fullName>
            </value>
            <value>
                <fullName>i50</fullName>
            </value>
            <value>
                <fullName>i60</fullName>
            </value>
            <value>
                <fullName>i99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>