force-app/main/default/objects/Opportunity/fields/Item_Setup__c.field-meta.xml
<CustomField>
    <fullName>Item_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Kitting Team to check this box once the item or items are set up.</inlineHelpText>
    <label>Item Setup Complete</label>
    <type>Checkbox</type>
</CustomField>