force-app/main/default/objects/Opportunity/fields/Kits_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Kits_Per_Week__c</fullName>
    <inlineHelpText>Number of Kits Per Week</inlineHelpText>
    <label>Kits Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>