force-app/main/default/objects/Opportunity/fields/Kits_stocked_at_Veritiv_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Kits_stocked_at_Veritiv_warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kits stocked at Veritiv warehouse?</label>
    <type>Checkbox</type>
</CustomField>