force-app/main/default/objects/Opportunity/fields/KitsShippingDirect__c.field-meta.xml
<CustomField>
    <fullName>KitsShippingDirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kits shipping Direct from CoPacker?</label>
    <type>Checkbox</type>
</CustomField>