force-app/main/default/objects/Opportunity/fields/Kitting_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitting Contract Received</label>
    <type>Checkbox</type>
</CustomField>