force-app/main/default/objects/Opportunity/fields/Kitting_Name_Contents_of_Kit__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Name_Contents_of_Kit__c</fullName>
    <label>Kitting Name/Contents of Kit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>