force-app/main/default/objects/Opportunity/fields/Kitting_Opportunity_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Opportunity_Lightning__c</fullName>
    <inlineHelpText>Does this opportunity pull thru packaging sales?</inlineHelpText>
    <label>Pull Through Pkging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>