force-app/main/default/objects/Opportunity/fields/Kitting_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Project_Number__c</fullName>
    <description>This field will auto-generate a number on every opportunity.  But it will only be used by the kitting team, to help them uniquely identify the opportunity projects they are working on.</description>
    <displayFormat>K-{000000}</displayFormat>
    <label>Kitting Project Number</label>
    <type>AutoNumber</type>
</CustomField>