force-app/main/default/objects/Opportunity/fields/Kitting_Region__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Region__c</fullName>
    <label>Kitting Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>