force-app/main/default/objects/Opportunity/fields/Kitting_SOW_Completed__c.field-meta.xml
<CustomField>
    <fullName>Kitting_SOW_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitting SOW Completed</label>
    <type>Checkbox</type>
</CustomField>