force-app/main/default/objects/Opportunity/fields/Kitting_Status__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Status__c</fullName>
    <description>Kitting</description>
    <label>Kitting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Need More Information - CoPacker</fullName>
            </value>
            <value>
                <fullName>Need More Information - Sales</fullName>
            </value>
            <value>
                <fullName>Complete - Kitting</fullName>
            </value>
            <value>
                <fullName>Not Qualified for Kitting</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>