force-app/main/default/objects/Opportunity/fields/Lane_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Lane_Frequency__c</fullName>
    <label>Lane Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Truckload__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>