force-app/main/default/objects/Opportunity/fields/LastModifiedById_NonAdmin__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById_NonAdmin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2/24/22 - field not used or updated.  Not needed.</description>
    <label>zzLastModifiedById-NonAdmin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>