force-app/main/default/objects/Opportunity/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Size Length</description>
    <label>Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>