force-app/main/default/objects/Opportunity/fields/Link_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Opportunity__c</fullName>
    <description>creates a url text string that can be added to a report and exported to Excel</description>
    <formula>&quot;https://na172.salesforce.com/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Opportunity</label>
    <type>Text</type>
</CustomField>