force-app/main/default/objects/Opportunity/fields/List_of_Raw_Materials_Customer_Provided__c.field-meta.xml
<CustomField>
    <fullName>List_of_Raw_Materials_Customer_Provided__c</fullName>
    <description>Kitting</description>
    <label>List of Raw Materials Customer Provided</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>