force-app/main/default/objects/Opportunity/fields/List_of_Special_Equipment__c.field-meta.xml
<CustomField>
    <fullName>List_of_Special_Equipment__c</fullName>
    <description>Kitting</description>
    <label>List of Special Equipment</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>